fix toggle position on smaller screen sizes

--- a/src/_assets/stylesheets/main.scss
+++ b/src/_assets/stylesheets/main.scss
@@ -841,9 +841,11 @@ body.condensed_header {
 }
 
 @media(max-width: 479px) {
-  // #search {
-  //   width: 195px;
-  // }
+  #menu-toggle {
+    position: absolute;
+    right: 10px;
+    top: 0px;
+  }
   #mainnav {
     ul {
       li {
